adjust card styles to stop graphic stretch on mobile

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -79,7 +79,7 @@ nav a:hover {
 main {
     display: flex;
     text-align: center;
-    flex-wrap: wrap;
+    flex-direction: column;
     margin-top: 1em;
 }
 
@@ -87,13 +87,14 @@ main {
     flex-grow: 1;
     flex-direction: column;
     width: 96%;
-    margin: 5px 15px;
+    margin: 5px 5px;
     flex-basis: 320px;
     text-align: center;
     border: 3px solid #cb9404;
     border-radius: 20px;
-    padding: 8px;
+    padding: 7px;
     font-size: 1.2em;
+    align-self: center;
 }
 
 .content-box h1 {
@@ -102,7 +103,7 @@ main {
 
 .content-box p {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    max-width: 94%;
+    max-width: 96%;
     margin: 0 auto;
 }
 
@@ -147,23 +148,67 @@ iframe {
 
 .card-front {
     height: 100%;
-    padding: 20px 10px 100px;
-    background-image: url("images/tarot-back.jpg");
+    padding: 20px 10px;
+    /* background-image: url("images/tarot-back.jpg");
     background-size: 100% 100%;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
 }
 
 
 /* Media Queries */
 
-@media screen and (min-width: 570px) {
-}
-
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 680px) {
     #logo {
         display: block;
-        max-width: 20%;
+        max-width: 50%;
         margin: 1% auto;
+    } 
+
+    nav li, #social-media li {
+        font-size: 5vw;    
+    }
+
+    .content-box {
+        font-size: 1.4em;
+    }
+
+    .bio {
+        display: block;
+        min-height: 350px;
+        text-align: left;
+    }
+
+    .bio:first-of-type {
+        margin-bottom: 40px;
+    }
+
+    .bio img {
+        max-width: 200px;
+        margin: 0 10px 5px; 
+    }
+    
+    #emily {
+        float: left;
+    }
+
+    #lauren {
+        float: right;
+        margin-top: 0;
+    }    
+    
+}
+
+@media screen and (min-width: 900px) {
+
+    .bio p {
+        padding-top: 30px;
+    }
+
+}
+
+@media screen and (min-width: 1200px) {
+    #logo {
+        max-width: 20%;
     } 
 
     header {
@@ -192,35 +237,34 @@ iframe {
     }
     main {
         min-height: calc(130vh - 59.4px);
+        flex-direction: row;
     }
 
     .content-box {
+        font-size: 1.1em;
         flex-direction: row;
         width: 30%;
-        flex-basis: 400px;
+        flex-basis: 30%;
+        align-self: unset;
+        margin: 5px 8px;
     }
 
-    .bio {
-        display: unset;
-        text-align: left;
-    }
-    
-    .bio img {
-        max-width: 160px;
+    .card-front {
+        padding: 20px 10px 100px;
+        background-image: url("images/tarot-back.jpg");
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
     }
 
-    #emily {
-        float: left;
-        margin: 0 20px 10px; 
-    }
-    
-    #lauren {
-        float: right;
-        margin: 40px 10px 10px;
+    .bio p {
+        padding-top: 0;
     }
 
     .bio p:last-child, .bio img:last-child {
         margin-top: 40px;
     }
 
+    .bio img {
+        max-width: 160px;
+    }
 }
